// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Refs callback refs resolves the callback ref 1`] = `
<Input value="foo">
  <input ref={ref()} value="foo" />
</Input>
`;

exports[`Refs createRef resolves the ref 1`] = `
<Section>
  <div ref={<div />}>
    Child
  </div>
</Section>
`;

exports[`Refs forwardRef resolves the ref from the HOC 1`] = `
<ForwardRef>
  <WithRef forwardedRef={new InnerButton()}>
    <InnerButton ref={new InnerButton()}>
      <button type="button">
        Child
      </button>
    </InnerButton>
  </WithRef>
</ForwardRef>
`;

exports[`Refs forwardRef resolves the ref from the inner component 1`] = `
<ForwardRef>
  <button ref={<button />} type="button">
    Child
  </button>
</ForwardRef>
`;

exports[`Refs string refs resolves the string ref 1`] = `
<Link href="/">
  <a ref={ref()} href="/">
    Child
  </a>
</Link>
`;
